syntax = "proto3";
package luqchain.bridge;

option go_package = "luqchain/bridge/types";
message TmSig {
	bytes R = 1;
	bytes S = 2;
	uint32 V = 3;
	bytes EncodedTimestamp = 4;
}

message CommonEncodedVotePart {
	bytes SignedDataPrefix = 1;
	bytes SignedDataSuffix = 2;
}